# maverik_vector_store

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
docs/: DOCUMENTACION_PROYECTO.md  GUIA_USO_PRACTICO.md  README.md  REFERENCIA_RAPIDA.md
files/: .gitkeep  README.md
notebooks/: vector-store-mongoDB-openai.ipynb
scripts/: check_index.py  check_space.py  cleanup_db.py  ingest.py  log_analyzer.py  search.py
src/: __init__.py  config.py
src/embedding/: __init__.py  openai_embeddings.py
src/loaders/: __init__.py  json_loader.py  pdf_loader.py
src/utils/: __init__.py  logger.py  splitter.py
src/vectorstore/: __init__.py  mongodb_vectorstore.py
tests/: __init__.py  test_embeddings.py  test_ingest.py
